feat(cluster): 添加集群协调器实现租约仲裁机制
- 实现 ClusterCoordinator 类支持租约管理和版本控制
- 添加 Fencing Token 机制防止集群脑裂问题
- 实现基于租约的节点健康检测和故障仲裁功能
- 添加路由表版本管理和节点状态同步机制
- 实现 CoordinatorLease 管理分片租约生命周期
- 添加 LeaseEvent 事件通知机制
- 实现集群状态监听器和故障处理配置
- 添加 NodeHealth 状态跟踪和抖动检测功能
- 实现分片路由和 Intent 路由功能
- 添加集群协调器生命周期管理方法